# qpid-dispatch

./: .travis.yml  CMakeLists.txt  LICENSE  macports.sh  pom.xml  run.py.in
.github/workflows/: build.yaml  codeql-analysis.yml  console.yaml  windows.yaml
cmake/: RuntimeChecks.cmake
console/: CMakeLists.txt
console/react/: package-lock.json  package.json
dockerfiles/: Dockerfile-ubuntu
docs/man/: help2txt.py
include/qpid/: dispatch.h
router/: CMakeLists.txt
router/src/: config.h.in  main.c
src/: CMakeLists.txt  alloc_pool.c  amqp.c  buffer.c  c.h  connection_manager.c  container.c  discriminator.c  dispatch.c  dispatch_private.h  entity_cache.c  error.c  hash.c  http-libwebsockets.c  log.c  log_private.h  message.c  message_private.h  platform.c  policy.h  python_embedded.c  python_private.h  qd_asan_interface.h  remote_sasl.c  router_node.c  router_pynode.c  schema_c.py  server.c  server_private.h  terminus_private.h  timer.c
src/adaptors/: tcp_adaptor.c
src/posix/: pthread.h
src/router_core/: connections.c  delivery.c  delivery.h  forwarder.c  router_core.c  router_core_private.h  router_core_thread.c  strings.h  transfer.c
src/win32/: aliases.h  dynlibs.c  networking.h  syslog.c  threading.c
tests/: CMakeLists.txt  alloc_test.c  clogger.c  http1_tests.py  http2_server.py  http2_slow_q2_server.py  hyperh2_server.py  lsan.supp  router_engine_test.py  router_policy_test.py  run_unit_tests.c  system_test.py  system_tests_address_lookup.py  system_tests_auth_service_plugin.py  system_tests_authz_service_plugin.py  system_tests_authz_service_plugin.py.in  system_tests_autolinks.py  system_tests_bad_configuration.py  system_tests_cmdline_parsing.py  system_tests_connector_status.py  system_tests_console.py  system_tests_core_client.py  system_tests_core_endpoint.py  system_tests_default_distribution.py  system_tests_delivery_abort.py  system_tests_delivery_counts.py  system_tests_disallow_link_resumable_link_route.py  system_tests_distribution.py  system_tests_drain.py  system_tests_drain_support.py  system_tests_dynamic_terminus.py  system_tests_edge_router.py  system_tests_exchange_bindings.py  system_tests_failover_list.py  system_tests_fallback_dest.py  system_tests_grpc.py  system_tests_handle_failover.py  system_tests_heartbeats.py  system_tests_http.py  system_tests_http1_adaptor.py  (+38 more)
tests/c_benchmarks/: CMakeLists.txt  (+2 more)
tests/c_unittests/: CMakeLists.txt  helpers.hpp  qdr_doctest.hpp  test_listener_startup.cpp  test_terminus.cpp
(+54 files in other folders)
